--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -14,4 +14,14 @@
        [routerLinkActive]="['active', 'pretty']"
        [routerLink]="['communications']">Communications</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link"
+       [routerLinkActive]="['active', 'pretty']"
+       [routerLink]="['counter']">Counter</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link"
+       [routerLinkActive]="['active', 'pretty']"
+       [routerLink]="['shopping']">Shopping List</a>
+  </li>
 </ul>
